--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "type": "git",
     "url": "git+https://github.com/WsCandy/gulp-flow.git"
   },
+  "bin": {
+    "flow": "bin/flow"
+  },
   "bugs": {
     "url": "https://github.com/WsCandy/gulp-flow/issues"
   },
